--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="container">
       <div class="info">
-        <div class="name">山田一郎</div>
+        <div class="name">山本健太</div>
         <div class="txt">
-          ハローワールド！<br>
+          Hello World！<br>
           これが初めてのページです。このページは練習用のページですのでポートフォリオとは関係ありません。<br>
           私がよく見るサイトは<a href="http://youtube.com" target='_blank'>YouTube</a>です。
         </div>
