--- a/practice.html
+++ b/practice.html
@@ -15,17 +15,17 @@
     <div class="future">
         <h2>今後の予定</h2>
         <u1 class="1ist">
-            <1i>JSの学習</1i>
-            <1i>CSSの学習</1i>
-            <1i>ポートフォリオの制作</1i>
+            <li>JSの学習</li>
+            <li>CSSの学習</li>
+            <li>ポートフォリオの制作</li>
         </u1>
     </div>
 
     <div class="past">
         <h3>過去の課題</h3>
         <u1 class="1ist">
-            <1i>HTML基礎</1i>
-            <1i>CSS基礎</1i>
+            <li>HTML基礎</i>
+            <li>CSS基礎</li>
         </u1>
     </div>
 
