--- a/practice.html
+++ b/practice.html
@@ -33,7 +33,7 @@
     </div>
     <div class="Btns">
         <a class="prev bth" href="#">prev</a>
-        <a class="next bth" href="#">next</a>
+        <a class="next bth" href="index.html">next</a>
     </div>
 </div>
 </body>
