class=practice-page追加

--- a/practice.html
+++ b/practice.html
@@ -34,6 +34,10 @@
     <div class="Btns">
         <a class="next bth" href="./index.html">next</a>
     </div>
+
+    <div class=practice_page>
+
+    </div>
 </div>
 </body>
 </html>
