--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,7 @@
     <title>練習</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
-<body>
+<body class="practice_page">
 <div class="info">
     <h1 id="title">練習</h1>
     <div class="txt">
@@ -35,9 +35,6 @@
         <a class="next bth" href="./index.html">next</a>
     </div>
 
-    <div class=practice_page>
-
-    </div>
 </div>
 </body>
 </html>
