画像追加&Home変更

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <nav id='main_nav'>
           <ul>
             <li><span>Home</sapn></li>
-            <li><a href="./subjects/swnwb1.html">SwNwBasis:1</a></li>
-            <li><a href="./cv.html">CV</a></li>
+            <li><a href="./subjects/swnwb1.html">Deliverables</a></li>
+            <li><a href="./cv.html">My profile</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
-        <h1>白石の学習進捗ページ</h1>
-        <p class="main_pic"><img src="./assets/images/main.jpg" alt=""></p>
+        <h1>山本健太の学習進捗ページ</h1>
+        <p class="main_pic"><img src="./assets/images/Monster_neon.jpg" alt=""></p>
         <h2>履修科目</h2>
         <div class="period">
           <h3>前期</h3>
           <ol>
-            <li><a href="./subjects/swnwb1.html">ソフトウェアネットワーク演習Ⅰ</a></li>
+            <a href="./subjects/swnwb1.html">メディアリテラシー基礎</a></li>
           </ol>
         </div>
         <div class="period">
@@ -38,12 +38,13 @@
             <li>ソフトウェアネットワーク演習Ⅱ</li>
             <li>クロステックデザイン演習Ⅲ</li>
           </ol>
-          <h2><a href="./cv.html">自己紹介</a></h2>
+          <h2>自己紹介</h2>
+          <a href="./cv.html">My profile</a>
         </div>
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <p>KUAD クロステックデザインコース 2020</p>
       </footer>
 
     </div>
