--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <ul>
             <li><span>Home</sapn></li>
             <li><a href="./subjects/swnwb1.html">Deliverables</a></li>
-            <li><a href="./subujects/cv.html">My profile</a></li>
+            <li><a href="./cv.html">My profile</a></li>
           </ul>
         </nav>
       </header>
