--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -16,8 +16,8 @@
         <nav id='main_nav'>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./subjects/swnwb1.html"></a></li>
-            <li><span>CV</span></li>
+            <li><a href="./subjects/swnwb1.html">Deliverables</a></li>
+            <li><span>My profile</span></li>
           </ul>
         </nav>
       </header>
