--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -16,8 +16,8 @@
         <nav id='main_nav'>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><span>SwNwBasis:1</span></li>
-            <li><a href="../cv.html">CV</a></li>
+            <li><span>Deliverables</span></li>
+            <li><a href="../cv.html">My profile</a></li>
           </ul>
         </nav>
       </header>
