--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -16,7 +16,7 @@
         <nav id='main_nav'>
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./subjects/swnwb1.html">Deliverables</a></li>
+            <li><a href="./subjects/swnwb1.html"Deliverables></a></li>
             <li><span>My profile</span></li>
           </ul>
         </nav>
@@ -24,23 +24,30 @@
 
       <main>
         <h1>自己紹介</h1>
-        <div class="youtube">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/YuRCme77K3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="Icon">
+          <iframe width="560" height="315" src="./assets/images/Icon.jpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mb_l">
-          <p>私は白石晃一です．</p>
-          <p>私は38歳です．</p>
-          <p>
-            私は，36歳の妻と，6歳の三毛猫と，3歳の息子と同居しています．
-            <br>息子は「ギャーギャー」ととてもうるさいため，猫はいつも寝室に避難しています．
-            <br>妻と猫は相思相愛なので，妻の後ろを金魚のフンのように付いて回りますが，私に懐いていません．
-          </p>
+          <ul>
+            <li>name:山本 健太/Yamamoto_Kenta</li>>
+            <li>age:19</li>
+            <li>birthday:June 4</li>
+            <li>blood_type:OO</li>
+            <li>important_things:Monster energy</ul>
+            <li>important_words:誰かに負けるのは良い。けど、自分自身には負けられない。</li>
+            <li>hobby:プラモデル制作・カラオケ・動画視聴</li>
+            <li>favorite_things:酸っぱいもの・洋食全般・EDM・アニソン・・・etc.</li>
+            <li>hate_things:虫全般・自分自身・理不尽</li>
+          </ul> 
+
+          <p>recent_worries:ただひたすらにヒマな時間が欲しい</p>
+         
         </div>
         <p class="sub_pic"><img src="./assets/images/statue.jpg" alt=""></p>
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <p>KUAD クロステックデザインコース 2020</p>
       </footer>
     </div>
   </body>
