しゅうせい

--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/custom.css">
   </head>
 
-  <body class='cv_page'>
+  <body class='subject_page'>
     <div id='wrapper'>
       <header>
         <nav id='main_nav'>
