--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -15,8 +15,8 @@
       <header>
         <nav id='main_nav'>
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./subjects/swnwb1.html"Deliverables></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./swnwb1.html"Deliverables></a></li>
             <li><span>My profile</span></li>
           </ul>
         </nav>
@@ -25,7 +25,7 @@
       <main>
         <h1>自己紹介</h1>
         <div class="Icon">
-          <iframe width="560" height="315" src="./assets/images/Icon.jpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="../assets/images/Icon.jpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mb_l">
           <ul>
