--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><span>Deliverables</span></li>
-            <li><a href="./subjects/cv.html">My profile</a></li>
+            <li><a href="./cv.html">My profile</a></li>
           </ul>
         </nav>
       </header>
