--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -29,7 +29,7 @@
         </div>
         <div class="mb_l">
           <ul>
-            <li>name:山本 健太/Yamamoto_Kenta</li>>
+            <li>name:山本 健太/Yamamoto_Kenta</li>
             <li>age:19</li>
             <li>birthday:June 4</li>
             <li>blood_type:OO</li>
