--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -16,7 +16,7 @@
         <nav id='main_nav'>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="./swnwb1.html"Deliverables></a></li>
+            <li><a href="./swnwb1.html">Deliverables</a></li>
             <li><span>My profile</span></li>
           </ul>
         </nav>
