--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -33,7 +33,7 @@
             <li>age:19</li>
             <li>birthday:June 4</li>
             <li>blood_type:OO</li>
-            <li>important_things:Monster energy</ul>
+            <li>important_things:Monster energy</li>
             <li>important_words:誰かに負けるのは良い。けど、自分自身には負けられない。</li>
             <li>hobby:プラモデル制作・カラオケ・動画視聴</li>
             <li>favorite_things:酸っぱいもの・洋食全般・EDM・アニソン・・・etc.</li>
