--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="period">
           <h3>前期</h3>
           <ol>
-            <a href="./subjects/swnwb1.html">メディアリテラシー基礎</a></li>
+            <a href="./subjects/swnwb1.html">メディアリテラシー基礎</a>
           </ol>
         </div>
         <div class="period">
