--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="period">
           <h3>前期</h3>
           <ol>
-            <a href="./subjects/swnwb1.html">メディアリテラシー基礎</a>
+            <b href="./subjects/swnwb1.html">メディアリテラシー基礎</b>
           </ol>
         </div>
         <div class="period">
@@ -39,7 +39,7 @@
             <li>クロステックデザイン演習Ⅲ</li>
           </ol>
           <h2>自己紹介</h2>
-          <a href="./cv.html">My profile</a>
+          <b href="./cv.html">My profile</b>
         </div>
       </main>
 
