--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -25,7 +25,7 @@
       <main>
         <h1>自己紹介</h1>
         <div class="Icon">
-          <iframe width="560" height="315" src="../assets/images/Icon.jpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="../assets/images/Icon.jpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mb_l">
           <ul>
