--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -23,33 +23,46 @@
       </header>
 
       <main>
-        <h1>ソフトウェアネットワーク演習</h1>
+        <h1>制作物</h1>
         <div class="session">
           <h2>Session:1</h2>
-          <h3>課題：Photoshopでトップページ画像を作成する</h3>
+          <h3>課題：名刺デザイン</h3>
           <p>
-            ここにどのようにして，課題を作成したのか？を記述してください．
-            <br>写真を入れたり，動画を埋め込んだりするととてもいい．
+            Illustratorを用いて自分の名刺をデザイン。
+            <p class="main_pic"><img src="../assets/images/namecard.png" alt=""></p>
+            シンプルイズベストかつ文字を大きめにして見やすさも求めて見た。(名前以外の個人情報はモザイク処理しています。)
           </p>
         </div>
         <div class="session">
           <h2>Session:2</h2>
-          <h3>WebPageの構造</h3>
-          <p>HTMLを使ったWebPageの構造を、</p>
+          <h3>スペーシング練習</h3>
+          <p>Illustratorを用いて</p>
           <ul>
-            <li>どのように作ったか？</li>
-            <li>自分なりのこだわりは？</li>
+            <li>普通</li>
+            <li>ゆったり</li>
+            <li>狭め</li>
           </ul>
+          <p>の3種類の文字間でスペーシングしてみた。</p>
+          <p class="main_pic"><img src="../assets/images/Normal.png" alt=""></p>
+          <p class="main_pic"><img src="../assets/images/wide.png" alt=""></p>
+          <p class="main_pic"><img src="../assets/images/tight.png" alt=""></p>
+          <p>見た感じでは良い感覚に見えはするものの、調整に少し時間を費やしてしまったため練習が必要。</p>
         </div>
         <div class="session">
           <h2>Session:3</h2>
-          <h3>スタイルをあてる</h3>
-          <p>スタイル（デザイン）を反映して、Pageを公開する</p>
+          <h3>解像度&配置練習</h3>
+          <p>IllustratorおよびPhotoshopを用いて
+            <li>自分で撮影した写真を「解像度350ppi」に変換。</li>
+            <li>解像度を変換した写真を130mm角のクリッピングマスクをかけ、トリミング。</li>
+            <li>写真のタイトルとその説明を入力。</li>
+            <li>作成したアートボードをPDFで書き出し、ファイル名に自分の氏名を記入した上でClassroomにて提出。</li>
+            <p class="main_pic"><img src="../assets/images/matchacake_and_hottea.png" alt=""></p>
+          </p>
         </div>
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <p>KUAD クロステックデザインコース 2020</p>
       </footer>
     </div>
   </body>
