--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -30,7 +30,7 @@
           <p>
             Illustratorを用いて自分の名刺をデザイン。
             <p class="main_pic"><img src="../assets/images/namecard.png" alt=""></p>
-            シンプルイズベストかつ文字を大きめにして見やすさも求めて見た。(名前以外の個人情報はモザイク処理しています。)
+            <p>シンプルイズベストかつ文字を大きめにして見やすさも求めて見た。(名前以外の個人情報はモザイク処理しています。)</p>
           </p>
         </div>
         <div class="session">
