--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -51,13 +51,13 @@
         <div class="session">
           <h2>Session:3</h2>
           <h3>解像度&配置練習</h3>
-          <p>IllustratorおよびPhotoshopを用いて
+          <ul>IllustratorおよびPhotoshopを用いて
             <li>自分で撮影した写真を「解像度350ppi」に変換。</li>
             <li>解像度を変換した写真を130mm角のクリッピングマスクをかけ、トリミング。</li>
             <li>写真のタイトルとその説明を入力。</li>
             <li>作成したアートボードをPDFで書き出し、ファイル名に自分の氏名を記入した上でClassroomにて提出。</li>
             <p class="main_pic"><img src="../assets/images/matchacake_and_hottea.png" alt=""></p>
-          </p>
+          </ul>
         </div>
       </main>
 
