--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -57,6 +57,7 @@
             <li>写真のタイトルとその説明を入力。</li>
             <li>作成したアートボードをPDFで書き出し、ファイル名に自分の氏名を記入した上でClassroomにて提出。</li>
             <p class="main_pic"><img src="../assets/images/matchacake_and_hottea.png" alt=""></p>
+            <p>個人的にPhotoshopは自発的に触らないと使い方を忘れると感じたため、機会を見てどんどん触っていこうと思う。</p>
           </ul>
         </div>
       </main>
