--- a/subjects/cv.html
+++ b/subjects/cv.html
@@ -29,18 +29,18 @@
         </div>
         <div class="mb_l">
           <ul>
-            <li>name:山本 健太/Yamamoto_Kenta</li>
-            <li>age:19</li>
-            <li>birthday:June 4</li>
-            <li>blood_type:OO</li>
-            <li>important_things:Monster energy</li>
-            <li>important_words:誰かに負けるのは良い。けど、自分自身には負けられない。</li>
-            <li>hobby:プラモデル制作・カラオケ・動画視聴</li>
-            <li>favorite_things:酸っぱいもの・洋食全般・EDM・アニソン・・・etc.</li>
-            <li>hate_things:虫全般・自分自身・理不尽</li>
+            <li>name：山本 健太/Yamamoto_Kenta</li>
+            <li>age：19</li>
+            <li>birthday：June 4</li>
+            <li>blood_type：OO</li>
+            <li>important_things：Monster energy</li>
+            <li>important_words：誰かに負けるのは良い。けど、自分自身には負けられない。</li>
+            <li>hobby：プラモデル制作・カラオケ・動画視聴</li>
+            <li>favorite_things：酸っぱいもの・洋食全般・EDM・アニソン・・・etc.</li>
+            <li>hate_things：虫全般・自分自身・理不尽</li>
           </ul> 
 
-          <p>recent_worries:ただひたすらにヒマな時間が欲しい</p>
+          <p>recent_worries：ただひたすらにヒマな時間が欲しい</p>
          
         </div>
         <p class="sub_pic"><img src="./assets/images/statue.jpg" alt=""></p>
