--- a/basic_practice/sample/index.html
+++ b/basic_practice/sample/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/filipelinhares/ress/master/dist/ress.min.css"/>
-
+    <link  rel = " stylesheet " href = " //cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css ">
     <!-- 自分のcss -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- 自分のjs -->
@@ -18,6 +18,16 @@
     <title>スライドショー</title>
   </head>
   <body>
+    <a ID="demo01" HREF="#animatedModel">DEMO01</a>
+    <div id="animatedModel">
+      <div class ="close-animatedModel">
+        CLOSE MODEL
+      </div>
+      <div class="model-content">
+      </div>
+    </div>
+    <script src="//ajax.googlepis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script  src = " yourPath / animatedModal.min.js " > </script>
     <div class="wrapper">
       <div id="slide">
         <div><img src="./images/html.jpg"></div>
