自動再生機能追加

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="period">
           <h3>後期</h3>
           <ol>
-            <li>ソフトウェアネットワーク演習Ⅱ</li>
+            <c href="./basic_practice/practice/index.html">ソフトウェアネットワーク演習Ⅱ</li>
             <li>クロステックデザイン演習Ⅲ</li>
           </ol>
           <h2>自己紹介</h2>
