--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <h2>履修科目</h2>
         <div class="period">
           <h3>前期</h3>
-          <ol>
-            <b href="./subjects/swnwb1.html">メディアリテラシー基礎</b>
-          </ol>
+          <ul>
+            <li><b href="./subjects/swnwb1.html">メディアリテラシー基礎</b></li>
+          </ul>
         </div>
         <div class="period">
           <h3>後期</h3>
-          <ol>
+          <ul>
             <c href="./basic_practice/practice/index.html">ソフトウェアネットワーク演習Ⅱ</li>
             <li>クロステックデザイン演習Ⅲ</li>
-          </ol>
+          </ul>
           <h2>自己紹介</h2>
           <b href="./cv.html">My profile</b>
         </div>
