--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="period">
           <h3>前期</h3>
           <ul>
-            <li><b href="./subjects/swnwb1.html">メディアリテラシー基礎</b></li>
+            <li><a href="./subjects/swnwb1.html">メディアリテラシー基礎</a></li>
           </ul>
         </div>
         <div class="period">
           <h3>後期</h3>
           <ul>
-            <c href="./basic_practice/practice/index.html">ソフトウェアネットワーク演習Ⅱ</li>
-            <li>クロステックデザイン演習Ⅲ</li>
+            <li><a href="./basic_practice/practice/index.html">ソフトウェアネットワーク演習Ⅱ</a></li>
+            <li><a>クロステックデザイン演習Ⅲ</a></li>
           </ul>
           <h2>自己紹介</h2>
-          <b href="./cv.html">My profile</b>
+          <li><a href="./cv.html">My profile</a></li>
         </div>
       </main>
 
